# vc-pattern-notebooks

./: .gitignore  .ruff.toml  Makefile  README.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
binder/: requirements.txt
data/: README.md
data/raw/: sample_fetch_log.json  sample_founders.csv  sample_unicorns.csv
docs/: METHODOLOGY.md
notebooks/: 01_unicorn_geography_and_sector.ipynb  02_time_to_unicorn.ipynb  03_founder_patterns_proxy.ipynb  04_data_quality_and_caveats.ipynb
scripts/: _build_notebook_04.py  _inject_notebook_helpers.py  fetch_data.py  refresh_data.py  validate_data.py
